✬ doc: 2fa routers openapi doc
