# internal/modules/user/http/dto/user.dto.go
@@ -14,11 +14,11 @@ func init() {
 }
 
 type UserInput struct {
-	Name       string `json:"name" valid:"required,matches(^[a-zA-Z ]+$),length(3|10)"`
-	LastName   string `json:"last_name" valid:"required,matches(^[a-zA-Z ]+$),length(3|50)"`
-	CPF        string `json:"cpf" valid:"matches(^[0-9]{3}\\.[0-9]{3}\\.[0-9]{3}-[0-9]{2}$)"`
-	Email      string `json:"email" valid:"email"`
-	Password   string `json:"password" valid:"required"`
+	Name     string `json:"name" valid:"required,matches(^[a-zA-Z ]+$),length(3|10)"`
+	LastName string `json:"last_name" valid:"required,matches(^[a-zA-Z ]+$),length(3|50)"`
+	CPF      string `json:"cpf" valid:"matches(^[0-9]{3}\\.[0-9]{3}\\.[0-9]{3}-[0-9]{2}$)"`
+	Email    string `json:"email" valid:"email"`
+	Password string `json:"password" valid:"required"`
 }
 
 type AuthenticationInput struct {
@@ -51,5 +51,10 @@ type UserUpdateInput struct {
 }
 
 type OTPInput struct {
-	Token  string `json:"token" valid:"required"`
+	Token string `json:"token" valid:"length(6),numeric"`
+}
+
+type OTPOutput struct {
+	Base32     string `json:"base32" valid:"required"`
+	OtpauthUrl string `json:"otpauth_url" valid:"required"`
 }
